<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_disabled"
    android:id="@+id/voice_interface"
    android:paddingVertical="15dp"
    android:paddingHorizontal="15dp"
    android:elevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_voice_feedback"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/in_ascolto"
            android:paddingTop="1dp"
            android:src="@drawable/ic_record_voice_over"
            app:tint="@color/bckgrd_gray_3"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/utterance_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="17sp"
            android:textColor="@color/gray_active"
            android:layout_marginEnd="35dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/microphone_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_mic_off"
            android:contentDescription="@string/pulsante_microfono"
            android:elevation="5dp"
            android:src="@drawable/ic_large_mic"
            android:tint="@color/gray_6"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/mic_prompt_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/tocca_per_parlare"
            android:textColor="#546E7A"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
